--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <script src="classes.js"></script>
+    <title>Paint.C</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Share your pixel art with the world.">
+    <meta name="keywords" content="Paint, Pixel, Art">
+    <meta name="author" content="Adam">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="Paint.C" property="og:title" />
+    <meta content="Share your pixel art with the world." property="og:description" />
+    <meta content="https://paintdotc.github.io/" property="og:url" />
+    <meta content="https://embed.com/embedimage.png" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 </head>
 
 <body>
