--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta content="Paint.C" property="og:title" />
     <meta content="Share your pixel art with the world." property="og:description" />
     <meta content="https://paintdotc.github.io/" property="og:url" />
-    <meta content="https://embed.com/embedimage.png" property="og:image" />
+    <meta content="https://github.com/paintdotc/paintdotc.github.io/raw/main/cdn/icon.png" property="og:image" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 </head>
 
