--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="data.js"></script>
-    <script src="utils.js"></script>
-    <script src="enums.js"></script>
-    <script src="classes.js"></script>
-    <script src="connections.js"></script>
-    <script defer src="tools.js"></script>
-    <script defer src="colorpicker.js"></script>
+    <script src="https://paintdotc.github.io/data.js"></script>
+    <script src="https://paintdotc.github.io/utils.js"></script>
+    <script src="https://paintdotc.github.io/enums.js"></script>
+    <script src="https://paintdotc.github.io/classes.js"></script>
+    <script src="https://paintdotc.github.io/connections.js"></script>
+    <script defer src="https://paintdotc.github.io/tools.js"></script>
+    <script defer src="https://paintdotc.github.io/colorpicker.js"></script>
 </head>
 
 <body oncontextmenu="return false;">
